# rusty-tomatoes

./: Cargo.toml  README.md
migrations/2022-11-06-125656_create_movies/: down.sql  up.sql
src/: args.rs  db.rs  main.rs  models.rs  schema.rs
