[package]
name = "rusty-tomatoes"
version = "0.1.0"
edition = "2021"
authors = ["phaedrus"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "uuid"] }
dotenvy = "0.15"
chrono = "^0"
